objects/DOCU__DOCUESignSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>DOCU__LoggingLevel__c</fullName>
        <description>The Administrator populates this text field to establish the logging level to capture. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Logging Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOCU__LoggingProvider__c</fullName>
        <description>The Administrator populates this text field to establish the logging provider to use. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Logging Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOCU__StoreRequests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Store Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOCU__StoreResponses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Store Responses</label>
        <type>Checkbox</type>
    </fields>
    <label>DOCU - E-Signature Settings</label>
</CustomObject>